# Object-oriented-SLAM

./: CMakeLists.txt  LICENSE  README.md  install_g2o.sh
Example/dataset/cabinet/: associate.txt  associateGroundtruth.txt  depth.txt  groundtruth.txt  rgb.txt
Example/dataset/cabinet/bbox/: 1341841278.8427.txt  1341841279.5107.txt  1341841280.1825.txt  1341841280.8507.txt  1341841281.5546.txt  1341841282.2265.txt  1341841282.8987.txt  1341841283.5665.txt  1341841284.2388.txt  1341841284.9067.txt  1341841285.6124.txt  1341841286.2827.txt  1341841286.9506.txt  1341841287.6227.txt  1341841288.2946.txt  1341841288.9627.txt  1341841289.6346.txt  1341841290.303.txt  1341841290.9745.txt  1341841291.6426.txt  1341841294.9952.txt  1341841295.6666.txt  1341841296.3348.txt  1341841297.0065.txt  1341841297.6786.txt  1341841298.3466.txt  1341841299.0185.txt  1341841299.6866.txt  1341841300.3656.txt  1341841301.7057.txt  1341841303.0456.txt  1341841303.7106.txt  1341841304.3787.txt  1341841305.0506.txt  1341841305.7227.txt  1341841306.3907.txt  1341841307.0627.txt  1341841307.7306.txt  1341841308.4099.txt  1341841309.1095.txt  (+11 more)
Example/interface/: rgbd.cpp
Example/param/: TUM3.yaml
include/core/: BasicEllipsoidEdges.h  DataAssociation.h  Ellipsoid.h  Frame.h  FrameDrawer.h  Geometry.h  Initializer.h  Map.h  MapDrawer.h  Optimizer.h  Plane.h  System.h  Tracking.h  Viewer.h
include/utils/: dataprocess_utils.h  matrix_utils.h
src/Polygon/: CMakeLists.txt  Polygon.cpp  Polygon.hpp
src/config/: CMakeLists.txt  Config.cpp  Config.h
src/core/: BasicEllipsoidEdges.cpp  DataAssociation.cpp  Ellipsoid.cpp  Frame.cpp  FrameDrawer.cpp  Geometry.cpp  Initializer.cpp  Map.cpp  MapDrawer.cpp  Optimizer.cpp  Plane.cpp  System.cpp  Tracking.cpp  Viewer.cpp
src/dense_builder/: CMakeLists.txt  builder.cpp  builder.h
src/pca/: CMakeLists.txt  EllipsoidExtractor.cpp  EllipsoidExtractor.h
src/plane/: CMakeLists.txt  PlaneExtractor.cpp  PlaneExtractor.h
src/symmetry/: BorderExtractor.cpp  BorderExtractor.h  CMakeLists.txt  PointCloudFilter.cpp  PointCloudFilter.h  Symmetry.cpp  Symmetry.h  SymmetrySolver.cpp  SymmetrySolver.h
src/tum_rgbd/: CMakeLists.txt  io.cpp  io.h
src/utils/: dataprocess_utils.cpp  matrix_utils.cpp
